refactor(sonar): clear the referentiel, journal and analyse lot
Co-Authored-By: Claude <noreply@anthropic.com>
Signed-off-by: Sylvain <git@sylvain.dev>